<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_activity">Sign in</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">"Name"</string>
    <string name="user_age">"Age"</string>
    <string name="user_address">"Address"</string>
    <string name="user_password">"Create a password"</string>
    <string name="create_admin_acc">"Create Admin Account"</string>
    <string name="create_empl_acc">"Create Employee Account"</string>
    <string name="total_price">Total: $100</string>
    <string name="check_out_button">Checkout</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$20</string>
    <string name="shopping_cart_title">Shopping Cart</string>
    <string name="customer_title">Customer</string>
    <string name="item_id">Item ID</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="set_up_db">"Setup New Database"</string>
    <string name="admin_login">"Admin Login"</string>
    <string name="more_opts">"More Options"</string>
    <string name="customer_login">"Customer Login</string>
    <string name="employee_login">"Employee Login</string>
    <string name="exit">"Exit"</string>
    <string name="create_user">"Create User"</string>
    <string name="enter_customer_id">"Enter the Customer ID:"</string>
    <string name="enter_account_id">"Enter the Account ID:"</string>
    <string name="store_cart">Store Cart in an Account</string>
    <string name="employee_title">Employee</string>
    <string name="admin_title">Admin</string>
    <string name="welcome_title">Welcome</string>
</resources>
